fixed overlapping scrollbar

--- a/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionLeftItem/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionLeftItem/styles.module.css
@@ -5,6 +5,7 @@
   font-size: var(--ifm-font-size-16);
   transform: translateZ(0);
   transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  overflow: hidden;
 }
 
 .Container:not(:last-child) {
